<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/selection_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/up_button"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_close_white_24dp" />
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_below="@id/selection_tool_bar">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="enterAlways|scroll"
                app:navigationIcon="?homeAsUpIndicator">

                <com.polyak.iconswitch.IconSwitch
                    android:id="@+id/toolbar_downloaded_only_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isw_icon_left="@drawable/ic_cloud_done_black_24dp"
                    app:isw_icon_right="@drawable/ic_cloud_download_black_24dp" />
                <!--app:isw_thumb_color_left="@color/material_yellow_500"-->
                <!--app:isw_thumb_color_right="@color/material_blue_500"-->
                <!--app:isw_inactive_tint_icon_left="@color/material_yellow_500"-->
                <!--app:isw_inactive_tint_icon_right="@color/material_blue_500-->

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>


        <FrameLayout
            android:id="@+id/book_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:layout="@layout/fragment_bookcategory_list" />
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>

